--- a/.github/workflows/mysql.yaml
+++ b/.github/workflows/mysql.yaml
@@ -14,7 +14,6 @@ jobs:
         image: mysql:latest
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_DATABASE: inventree_test_db
           MYSQL_USER: inventree
           MYSQL_PASSWORD: password
         options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
@@ -34,6 +33,11 @@ jobs:
           pip3 install invoke
           pip3 install mysqlclient
           invoke install
+      - name: Create Database
+        run: |
+          sudo /etc/init.d/mysql start
+          mysql -e 'CREATE_DATABASE inventree_test_db;' -uroot -proot
+          mysql -e 'SHOW DATABASES;' -uroot -proot
       - name: Run Tests
         run: |
           cd InvenTree
