--- a/.github/workflows/mysql.yaml
+++ b/.github/workflows/mysql.yaml
@@ -19,6 +19,8 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
         ports:
           - 3306:3306
+        command:
+          sudo /etc/init.d/mysql start
       
     steps:
       - name: Checkout Code
