--- a/.github/workflows/mysql.yaml
+++ b/.github/workflows/mysql.yaml
@@ -16,6 +16,7 @@ jobs:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_USER: inventree
           MYSQL_PASSWORD: password
+          MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: inventree_test_db
         options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
         ports:
