--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -1,6 +1,6 @@
 # Perform CI checks, and calculate code coverage
 
-name: Code Coverage
+name: SQLite
 
 on: ["push", "pull_request"]
 
@@ -10,10 +10,11 @@ jobs:
   # These tests are used for code coverage analysis
   coverage:
     runs-on: ubuntu-latest
+
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       INVENTREE_DB_NAME: './test_db.sqlite'
-      INVENTREE_DB_ENGINE: sqlite3
+      INVENTREE_DB_ENGINE: django.db.backends.sqlite3
 
     steps:
       - name: Checkout Code
