--- a/.github/workflows/postgresql.yaml
+++ b/.github/workflows/postgresql.yaml
@@ -41,7 +41,4 @@ jobs:
           pip3 install psycopg2
           invoke install
       - name: Run Tests
-        run: |
-          cd InvenTree
-          python3 manage.py test --settings=InvenTree.ci_postgresql
-  
+        run: invoke test
