--- a/.github/workflows/postgresql.yaml
+++ b/.github/workflows/postgresql.yaml
@@ -16,7 +16,7 @@ jobs:
       INVENTREE_DB_PASSWORD: password
       INVENTREE_DB_HOST: '127.0.0.1'
       INVENTREE_DB_PORT: 5432
-
+      INVENTREE_DEBUG: info
 
     services:
       postgres:
