--- a/.github/workflows/mariadb.yaml
+++ b/.github/workflows/mariadb.yaml
@@ -10,6 +10,7 @@ jobs:
     env:
       # Database backend configuration
       INVENTREE_DB_ENGINE: django.db.backends.mysql
+      INVENTREE_DB_NAME: inventree
       INVENTREE_DB_USER: root
       INVENTREE_DB_PASSWORD: password
       INVENTREE_DB_HOST: '127.0.0.1'
