Specify database name

--- a/.github/workflows/mysql.yaml
+++ b/.github/workflows/mysql.yaml
@@ -24,6 +24,7 @@ jobs:
         image: mysql:latest
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_DATABASE: inventree
           MYSQL_USER: inventree
           MYSQL_PASSWORD: password
           MYSQL_ROOT_PASSWORD: password
