--- a/.github/workflows/mariadb.yaml
+++ b/.github/workflows/mariadb.yaml
@@ -16,6 +16,8 @@ jobs:
       INVENTREE_DB_HOST: '127.0.0.1'
       INVENTREE_DB_PORT: 3306
       INVENTREE_DEBUG: info
+      INVENTREE_MEDIA_ROOT: ./media
+      INVENTREE_STATIC_ROOT: ./static
 
     services:
       mariadb:
