--- a/.github/workflows/postgresql.yaml
+++ b/.github/workflows/postgresql.yaml
@@ -18,6 +18,8 @@ jobs:
       INVENTREE_DB_HOST: '127.0.0.1'
       INVENTREE_DB_PORT: 5432
       INVENTREE_DEBUG: info
+      INVENTREE_MEDIA_ROOT: ./media
+      INVENTREE_STATIC_ROOT: ./static
 
     services:
       postgres:
