--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -7,7 +7,7 @@ on: ["push", "pull_request"]
 jobs:
   
   docker:
-    runs-on: ubtunu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
