--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -23,7 +23,7 @@ USER inventree
 WORKDIR /home/inventree
 
 # Install git
-RUN apt add --no-cache git
+RUN apk add --no-cache git
 
 # Clone source code
 RUN git clone --branch $INVENTREE_VERSION --depth 1 ${INVENTREE_REPO} ${INVENTREE_SRC_DIR}
