--- a/deploy/inventree.conf
+++ b/deploy/inventree.conf
@@ -13,6 +13,7 @@
 [supervisord]
 ; Change this path if log files are stored elsewhere
 logfile=/home/inventree/log/supervisor.log
+nodaemon=true
 
 [program:inventree-server]
 user=inventree
