Add supervisor conf file specific to docker

--- a/docker/inventree.conf
+++ b/docker/inventree.conf
@@ -1,5 +1,7 @@
-; # Supervisor Config File
-; Example configuration file for running InvenTree using supervisor
+; # Supervisor Config File (for docker build)
+;
+; This config file is specific to the InvenTree docker build!
+;
 ; There are two separate processes which must be managed:
 ;
 ; ## Web Server
@@ -13,11 +15,12 @@
 [supervisord]
 ; Change this path if log files are stored elsewhere
 logfile=/home/inventree/log/supervisor.log
+nodaemon=true
 
 [program:inventree-server]
 user=inventree
 directory=/home/inventree/src/InvenTree
-command=/home/inventree/env/bin/gunicorn -c gunicorn.conf.py InvenTree.wsgi
+command=/home/inventree/env/bin/gunicorn -c gunicorn.conf.py InvenTree.wsgi -b 0.0.0.0:%(INVENTREE_PORT)s
 startsecs=10
 autostart=true
 autorestart=true
