--- a/docker/supervisor.conf
+++ b/docker/supervisor.conf
@@ -13,8 +13,6 @@
 ; InvenTree uses django-q for this purpose
 
 [supervisord]
-; Change this path if log files are stored elsewhere
-logfile=/home/inventree/log/supervisor.log
 nodaemon=true
 
 [program:inventree-server]
@@ -25,9 +23,10 @@ startsecs=10
 autostart=true
 autorestart=true
 startretries=3
-; Change these paths if log files are stored elsewhere
-stderr_logfile=/home/inventree/log/server.err.log
-stdout_logfile=/home/inventree/log/server.out.log
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/fd/2
+stderr_logfile_maxbytes=0
 
 [program:inventree-cluster]
 user=inventree
@@ -36,6 +35,7 @@ command=/home/inventree/env/bin/python manage.py qcluster
 startsecs=10
 autostart=true
 autorestart=true
-; Change these paths if log files are stored elsewhere
-stderr_logfile=/home/inventree/log/cluster.err.log
-stdout_logfile=/home/inventree/log/cluster.out.log
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/fd/2
+stderr_logfile_maxbytes=0
