--- a/docker/supervisor.conf
+++ b/docker/supervisor.conf
@@ -18,7 +18,7 @@ nodaemon=true
 [program:inventree-server]
 user=inventree
 directory=/home/inventree/src/InvenTree
-command=/home/inventree/env/bin/gunicorn -c gunicorn.conf.py InvenTree.wsgi -b 0.0.0.0:%(INVENTREE_PORT)s
+command=/home/inventree/env/bin/gunicorn -c /home/inventree/gunicorn.conf.py InvenTree.wsgi -b 0.0.0.0:%(ENV_INVENTREE_PORT)s
 startsecs=10
 autostart=true
 autorestart=true
