--- a/docker/supervisor.conf
+++ b/docker/supervisor.conf
@@ -17,8 +17,8 @@ nodaemon=true
 
 [program:inventree-server]
 user=inventree
-directory=/home/inventree/src/InvenTree
-command=/home/inventree/env/bin/gunicorn -c /home/inventree/gunicorn.conf.py InvenTree.wsgi -b 0.0.0.0:%(ENV_INVENTREE_PORT)s
+directory=%(ENV_INVENTREE_SRC_DIR)s/InvenTree
+command=%(ENV_INVENTREE_VENV)s/bin/gunicorn -c %(ENV_INVENTREE_HOME)s/gunicorn.conf.py InvenTree.wsgi -b 0.0.0.0:%(ENV_INVENTREE_PORT)s
 startsecs=10
 autostart=true
 autorestart=true
@@ -30,8 +30,8 @@ stderr_logfile_maxbytes=0
 
 [program:inventree-cluster]
 user=inventree
-directory=/home/inventree/src/InvenTree
-command=/home/inventree/env/bin/python manage.py qcluster
+directory=%(ENV_INVENTREE_SRC_DIR)s/InvenTree
+command=%(ENV_INVENTREE_VENV)s/bin/python manage.py qcluster
 startsecs=10
 autostart=true
 autorestart=true
