--- a/InvenTree/company/fixtures/manufacturer_part.yaml
+++ b/InvenTree/company/fixtures/manufacturer_part.yaml
@@ -20,3 +20,20 @@
     part: 5
     manufacturer: 7
     MPN: 'MPN789'
+
+# Supplier parts linked to Manufacturer parts
+- model: company.supplierpart
+  pk: 10
+  fields:
+    part: 3
+    manufacturer_part: 2
+    supplier: 2
+    SKU: 'MPN456-APPEL'
+
+- model: company.supplierpart
+  pk: 11
+  fields:
+    part: 3
+    manufacturer_part: 2
+    supplier: 3
+    SKU: 'MPN456-ZERG'
