--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -13,6 +13,7 @@
 ; InvenTree uses django-q for this purpose
 
 [supervisord]
+user=inventree
 nodaemon=true
 
 [program:inventree-server]
@@ -31,7 +32,7 @@ stderr_logfile_maxbytes=0
 [program:inventree-cluster]
 user=inventree
 directory=%(ENV_INVENTREE_SRC_DIR)s/InvenTree
-command=%(ENV_INVENTREE_VENV)s/bin/python manage.py qcluster
+command=%(ENV_INVENTREE_VENV)s/bin/python DJANGO_SETTINGS_FILE=InvenTree.settings manage.py qcluster
 startsecs=10
 autostart=true
 autorestart=true
