--- a/InvenTree/config_template.yaml
+++ b/InvenTree/config_template.yaml
@@ -49,6 +49,7 @@ language: en-us
 # System time-zone (default is UTC)
 # Reference: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 # Select an option from the "TZ database name" column
+# Use the environment variable INVENTREE_TIMEZONE
 timezone: UTC
 
 # List of currencies supported by default.
@@ -63,6 +64,7 @@ currencies:
   - USD
 
 # Set debug to False to run in production mode
+# Use the environment variable INVENTREE_DEBUG
 debug: True
 
 # Set debug_toolbar to True to enable a debugging toolbar for InvenTree
@@ -71,6 +73,7 @@ debug: True
 debug_toolbar: False
 
 # Configure the system logging level
+# Use environment variable INVENTREE_LOG_LEVEL
 # Options: DEBUG / INFO / WARNING / ERROR / CRITICAL
 log_level: WARNING
 
