--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -16,18 +16,20 @@
 user=inventree
 nodaemon=true
 
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+
 [program:inventree-server]
 user=inventree
 directory=%(ENV_INVENTREE_SRC_DIR)s/InvenTree
-command=%(ENV_INVENTREE_VENV)s/bin/gunicorn -c %(ENV_INVENTREE_HOME)s/gunicorn.conf.py InvenTree.wsgi -b 0.0.0.0:8080
+command=%(ENV_INVENTREE_VENV)s/bin/gunicorn -c %(ENV_INVENTREE_HOME)s/gunicorn.conf.py InvenTree.wsgi -b 127.0.0.1:8080
 startsecs=10
 autostart=true
 autorestart=true
 startretries=3
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
-stderr_logfile=/dev/fd/2
-stderr_logfile_maxbytes=0
+redirect_stderr=true
 
 [program:inventree-cluster]
 user=inventree
@@ -38,5 +40,4 @@ autostart=true
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
-stderr_logfile=/dev/fd/2
-stderr_logfile_maxbytes=0
+redirect_stderr=true
