Updates to docker-compose file
- Note: not ready yet!

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.8"
 # Docker compose recipe for InvenTree
 # - Runs PostgreSQL as the database backend
 # - Serves web data using Gunicorn
+# - Runs the background worker process
+# - Runs nginx as a reverse proxy
 
 services:
     # Use PostgreSQL as the database backend
@@ -10,7 +12,7 @@ services:
     #       just make sure that you change the INVENTREE_DB_xxx vars below
     db:
         image: postgres
-        container_name: db
+        container_name: inventree_db
         ports:
             - 5432/tcp
         environment:
@@ -21,14 +23,43 @@ services:
             - database_data:/var/lib/postgresql/data/
         restart: unless-stopped
 
-    inventree:
-        build: .
+    server:
+        build:
+            context: .
+            args:
+                repository: "https://github.com/SchrodingersGat/InvenTree.git"
+                branch: "django-q"
         image: inventree/inventree:latest
-        container_name: inventree
+        container_name: inventree_server
         ports:
-            - 8080:8080
+            - "8080:8080"
         depends_on:
             - db
+        volumes:
+            - static_volume:/home/inventree/static
+            - media_volume:/home/inventree/media
+            - backup_volume:/home/inventree/backup
+        environment:
+            - INVENTREE_DB_ENGINE=postgresql
+            - INVENTREE_DB_NAME=inventree
+            - INVENTREE_DB_USER=pguser
+            - INVENTREE_DB_PASSWORD=pgpassword
+            - INVENTREE_DB_PORT=5432
+            - INVENTREE_DB_HOST=db
+        restart: unless-stopped
+
+    worker:
+        build:
+            context: .
+            args:
+                repository: "https://github.com/SchrodingersGat/InvenTree.git"
+                branch: "django-q"
+        entrypoint: ./start_worker.sh
+        image: inventree/worker:latest
+        container_name: inventree_worker
+        depends_on:
+            - db
+            - server
         volumes:
             - static_volume:/home/inventree/static
             - media_volume:/home/inventree/media
