--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,7 +20,9 @@ services:
             - POSTGRES_USER=pguser
             - POSTGRES_PASSWORD=pgpassword
         volumes:
-            - database_data:/var/lib/postgresql/data/
+            # Map external directory to store database data
+            # Replace /path/to/dir with the required external path
+            - /mnt/c/abcdatabase:/var/lib/postgresql/data/
         restart: unless-stopped
 
     server:
@@ -36,9 +38,9 @@ services:
         depends_on:
             - db
         volumes:
-            - static_volume:/home/inventree/static
-            - media_volume:/home/inventree/media
-            - backup_volume:/home/inventree/backup
+            # Map external directory to store InvenTree data
+            # Replace /path/to/dir with the required external path
+            - /mnt/c/abcde:/home/inventree/data
         environment:
             - INVENTREE_DB_ENGINE=postgresql
             - INVENTREE_DB_NAME=inventree
@@ -60,10 +62,6 @@ services:
         depends_on:
             - db
             - server
-        volumes:
-            - static_volume:/home/inventree/static
-            - media_volume:/home/inventree/media
-            - backup_volume:/home/inventree/backup
         environment:
             - INVENTREE_DB_ENGINE=postgresql
             - INVENTREE_DB_NAME=inventree
@@ -72,9 +70,3 @@ services:
             - INVENTREE_DB_PORT=5432
             - INVENTREE_DB_HOST=db
         restart: unless-stopped
-
-volumes:
-    database_data:
-    static_volume:
-    media_volume:
-    backup_volume:
